# actix-backend-task

./: .env  Cargo.toml
lesson-3.2.3-bank-api/: README.md
lesson-3.2.3-bank-api/src/: main.rs
lesson-3.2.6-bank-api-postgres/: README.md
src/: main.rs
src/application/: bank_service.rs  mod.rs
src/data/: memory_repo.rs  mod.rs
src/domain/: entities.rs  errors.rs  mod.rs  ports.rs
src/infrastructure/: logging.rs  mod.rs
src/presentation/: dto.rs  errors.rs  middleware.rs  mod.rs  routes.rs
