[package]
name = "actix-backend-task"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.13.0"
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "migrate", "uuid", "runtime-tokio-rustls"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "chrono"] }
uuid = { version = "1.23.0", features = ["serde", "v7"] }
